--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": "^8.0|^8.1",
-        "orchid/platform": "^12.0"
+        "orchid/platform": "^12.0 | @dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
