--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lintaba/orchid-tables",
+    "name": "EduardRe/orchid-tables",
     "description": "An opinionated extension package for Laravel Orchid to extend its table handling capabilities, and some further useful helper methods.",
     "type": "library",
     "license": "MIT",
