--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
         {
             "name": "Bálint Vass",
             "email": "lintaba@gmail.com",
-            "homepage": "https://github.com/lintaba"
+            "homepage": "https://github.com/EduardRe"
         }
     ],
-    "homepage": "https://github.com/lintaba/orchid-tables",
+    "homepage": "https://github.com/EduardRe/orchid-tables",
     "keywords": [
         "Laravel",
         "OrchidTables",
